--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+#Folders
+/build/
+/nbproject/private/
+
+#Drivers
+ojdbc11.jar
+/src/TestTriggerJava/nbproject/private/
+/src/TestTriggerJava/build/
