--- a/src/web/package.json
+++ b/src/web/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -21,10 +22,10 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.1",
     "react-native-web": "~0.19.6",
-    "react-router-native": "^6.20.1",
-    "@expo/webpack-config": "^19.0.0"
+    "react-router-native": "^6.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
